--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">AndroidDemo</string>
     <string name="hello_text">Hello %1$s!</string>
+    <string name="welcome_user">Welcome, %1$s!</string>
+    <string name="points_summary">%1$s, you have %2$d points.</string>
 </resources>
