PTC AndroidDemo (1675): Automatic French (France) Translations

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">AndroidDemo</string>
     <string name="hello_text">Salut %1$s !</string>
+    <string name="welcome_user">Bienvenue, %1$s !</string>
+    <string name="points_summary">%1$s, tu as %2$d points.</string>
 </resources>
