--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="hello_text">Hello %1$s!</string>
     <string name="welcome_user">Welcome, %1$s!</string>
     <string name="points_summary">%1$s, you have %2$d points.</string>
+    <plurals name="inbox_count">
+        <item quantity="one">%d new message</item>
+        <item quantity="other">%d new messages</item>
+    </plurals>
 </resources>
